--- a/README.org
+++ b/README.org
@@ -1,1 +1,10 @@
 # guitar2
+
+* Run the simulation
+
+
+Simulation runs by the following command:
+
+#+begin_src sh
+ElmerSolver case_it.sif
+#end_src
